fixes On the pricing tier embed, the wrapper div around Daily/Weekly/Monthly/Annually must be the size of the available options. For example if there is only monthly and yearly available, the wrapper div for the toggle shouldnt be so stretched. Also it looks very thick when its embeded, nothing like the design.

--- a/scss/_component-embeddable-pricing.scss
+++ b/scss/_component-embeddable-pricing.scss
@@ -7,8 +7,10 @@
   font-weight: 300;
   max-width: $gutter*30.5;
   margin: $gutter*3 auto;
+  display: flex;
+  justify-content: space-around;
 
-  ul._selector{
+ul._selector{
     @include resetUl;
     display: flex;
     justify-content: space-evenly;
